# PyTorchTraceAnalyzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  event.cpp  export.cpp  export.h  flops.cpp  install.sh  main.cpp  metrics.cpp  pyproject.toml  query.py  report.cpp  test.cpp  test.py  tree.cpp
include/: event.h  export.h  function.h  metrics.h  query.h  tree.h
include/util/: event.h  flops.h  metrics.h  report.h  tree.h
lib/: query.py
lib/convert/: query.py
metrics/: flops.cpp  metrics.cpp  metrics.h
query/: function.cpp  function.h  query.cpp  query.h
src/: export.cpp  function.cpp  metrics.cpp  query.cpp  tree.cpp
tree/: event.cpp  event.h  tree.cpp  tree.h
